<!--
  ~ 	Copyright (c) 2017. Token Browser, Inc
  ~
  ~ 	This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Token</string>
    <string name="eth_currency_code">ETH</string>
    <!-- Dialog errors -->
    <string name="dollar">$</string>
    <string name="tab_scan">Scan</string>
    <string name="tab_browse">Browse</string>
    <string name="tab_4">Favorites</string>
    <string name="tab_5">Me</string>
    <string name="send_message">Message…</string>
    <string name="message">Message</string>
    <string name="chat__empty_state">There are no messages, yet!</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_about">About</string>
    <string name="profile_location">Location</string>
    <string name="profile_name">Display Name</string>
    <string name="contact_list__empty_state">You have no contacts, yet!</string>
    <string name="error__required">This is required</string>
    <string name="error__invalid_characters">Invalid characters. No spaces allowed.</string>
    <string name="button_pay">Pay</string>
    <string name="button_request">Request</string>
    <string name="request_title">PAYMENT REQUEST</string>
    <string name="button_decline">DECLINE</string>
    <string name="button_accept">ACCEPT</string>
    <string name="eth_amount">%1$s ETH</string>
    <string name="payment_request__accepted">You accepted this request</string>
    <string name="payment_request__rejected">You declined this request</string>
    <string name="payment_title">PAYMENT</string>
    <string name="error__transaction_failed">Failed</string>
    <string name="error__message_failed">Message did not send</string>
    <string name="error__transaction_succeeded">Complete</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>
    <string name="request">Request</string>
    <string name="add_money">Add Money</string>
    <string name="scan_qr">Scan QR</string>
    <string name="eth_balance">%1$s ETH</string>
    <string name="continue_">Continue</string>
    <string name="send">Send</string>
    <string name="error__transaction_pending">Pending</string>
    <string name="error__message_pending">Pending</string>
    <string name="version">Version</string>
    <string name="search_or_type_the_url">Search or type the url</string>
    <string name="recommended">Recommended</string>
    <string name="tab_recent">Recent</string>
    <string name="send_amount">%1$s %2$s</string>
    <string name="recents_list__empty_state">You have no recent activity, yet!</string>
    <string name="button_send_amount">%1$s</string>
    <string name="to">To:</string>
    <string name="reputation">Reputation</string>
    <string name="profile_username">Username</string>
    <string name="about">About</string>
    <string name="contact_information_label">Contact information</string>
    <string name="contact_information">tokenbrowser@gmail.com</string>
    <string name="open_source_licenses">Legal</string>
    <string name="about__licenses">Open Source Licenses</string>
    <string name="error__app_loading">There was a problem loading this app</string>
    <string name="your_account_is_at_risk">Your account is at risk</string>
    <string name="security">Security</string>
    <string name="choose_trusted_friends">Choose trusted friends</string>
    <string name="store_backup_phrase">Store backup phrase</string>
    <string name="trusted_friends">Trusted friends</string>
    <string name="coming_soon">Coming soon</string>
    <string name="coming_soon_message">Your friends will be able to identify you when you lose your phone or need to sign in on a new device. Make sure to get your friends on Token.</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friends_intent_message">I’m using Token to access an open financial system. Join me: http://www.tokenbrowser.com/</string>
    <string name="let_s_secure_your_account">Let’s secure your account</string>
    <string name="backup_phrase_info_message">Storing a backup phrase will allow you to recover your funds if your phone is ever lost or stolen.\n\nIt’s important to store this backup phrase securely where nobody else can access it, such as on a piece of paper or in a password manager.</string>
    <string name="backup_phrase_understand_message">I understand that if I lose my backup phrase, I will be unable to recover access to my account.</string>
    <string name="backup_phrase">Backup phrase</string>
    <string name="this_is_your_backup_phrase">This is your backup phrase</string>
    <string name="backup_phrase_warning_message">Carefully write down the words. Don’t email it or screenshot it. </string>
    <string name="copy_phrase_to_clipboard">Copy phrase to Clipboard</string>
    <string name="verify_phrase">Verify phrase</string>
    <string name="verify">Verify</string>
    <string name="verify_backup_phrase_message">Tap or drag the words to put them next to each other in the correct order.</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="screenshot_warning_title">Screenshots are not secure</string>
    <string name="screenshot_warning_message">If you take a screenshot, your backup may be viewed by other apps</string>
    <string name="got_it">Got it</string>
    <string name="error__web_signin">It was not possible to complete sign in.</string>
    <string name="web_signin">Sign in successful</string>
    <string name="deposit_money">Deposit money</string>
    <string name="add_money_to_wallet">Add Money To My Wallet</string>
    <string name="deposit_info_message">You can add money to your account in a variety of ways</string>
    <string name="eth_deposit_method_1">1. Send ethereum from another wallet</string>
    <string name="eth_deposit_method_1_message">Send to this address to top up your wallet</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="eth_deposit_method_2">2. Find a local exchanger</string>
    <string name="eth_deposit_method_2_message">Find a local exchanger of ethereum in your country. You can give them cash and they will send you ethereum</string>
    <string name="eth_deposit_method_3">3. Earn money</string>
    <string name="eth_deposit_method_3_message">Install an app that lets you earn ethereum</string>
    <string name="eth_deposit_method_4">4. Request money from a friend</string>
    <string name="eth_deposit_method_4_message">Send a payment request to a friend who can help</string>
    <string name="confirm_payment_to">Confirm payment to</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="eth_usd">%1$s · %2$s ETH</string>
    <string name="confirmation_dialog_title_payment">Confirm payment to</string>
    <string name="confirmation_dialog_title_request">Confirm request to</string>
    <string name="not_enough_funds_title">Payment request failed</string>
    <string name="not_enough_funds_message">Not enough funds</string>
    <string name="rate">Rate</string>
    <string name="view_profile">View profile</string>
    <string name="error_unknown_user">Unable to find user at this address</string>
    <string name="latest_message__payment_outgoing">You paid %1$s</string>
    <string name="latest_message__payment_incoming">Received %1$s</string>
    <string name="latest_message__request_incoming">Request for %1$s</string>
    <string name="latest_message__request_outgoing">You requested %1$s</string>
    <string name="payment_failed_message">Unable to send money to %1$s</string>
    <string name="username_search_response_no_match">No user found with this username</string>
    <string name="parentheses">(%1$d)</string>
    <string name="write_a_review_optional">Write a review (optional)</string>
    <string name="review_dialog_title">Review %1$s</string>
    <string name="no_thanks">No thanks</string>
    <string name="review">Review</string>
    <string name="search_people">Search people</string>
    <string name="select_picture">Select Picture</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_from_library">Pick from library</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="profile_image_success">Profile photo successfully set</string>
    <string name="profile_image_error">Could not upload photo</string>
    <string name="error__offline">No internet connection</string>
    <string name="profile__unknown_name">No username set</string>
    <string name="unknown_sender">Unknown Sender</string>
    <string name="payment_seperator" translatable="false"> · </string>
    <string name="sign_out_warning_title">Have you recorded your backup phrase?</string>
    <string name="sign_out_warning_message">Without this you will not be able to sign back in to your account.</string>
    <string name="sign_out_cancelled_title">Sign out cancelled</string>
    <string name="sign_out_cancelled_message">You need to complete at least one of the security steps before you sign out.</string>
    <string name="sign_out_confirmation_title">Are you sure you want to sign out?</string>
    <string name="beta_warning_title">Be aware!</string>
    <string name="beta_warning_message">This is a beta version of Token. It can be unstable, and it is possible that you lose money.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_alert_message">This is your 12 word phrase, separated by spaces</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scan_qr_to_sign_in">Scan QR to sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="unable_to_restore_wallet">Unable to restore wallet</string>
    <string name="sign_in_length_error_message">Please insert 12 words</string>
    <string name="favorite">Favorite</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="transactions">Transactions</string>
    <string name="payment_to">to</string>
    <string name="payment_from">from</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="not_implemented">Not implemented</string>
    <string name="transaction__empty_state">No transactions, yet!</string>
    <string name="external_payment_prefix">ethereum</string>
    <string name="invalid_payment">Invalid payment</string>
    <string name="payment_address">Payment address: %1$s</string>
</resources>