<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ 	Copyright (c) 2017. Token Browser, Inc
  ~
  ~ 	This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/scan_qr"
          android:title="@string/scan_qr" />

    <item android:id="@+id/invite_friends"
          android:title="@string/invite_friends"/>

    <item android:id="@+id/search_people"
          android:title="@string/search_people"/>
</menu>