<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            style="@style/ToolbarTheme">

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_back"
                android:tint="@color/textColorContrast"
                android:padding="16dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                style="@style/Toolbar.TitleText"
                android:text="@string/deposit_money"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/add_money_to_wallet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/deposit_info_message"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"
                    android:text="@string/eth_deposit_method_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/eth_deposit_method_1_message"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/qr_code"
                        android:layout_width="100dp"
                        android:layout_height="100dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/owner_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/textColorSecondary" />

                        <TextView
                            android:id="@+id/copy_to_clipboard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:text="@string/copy_to_clipboard"/>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/eth_deposit_method_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/eth_deposit_method_2_message"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/eth_deposit_method_3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/eth_deposit_method_3_message"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/eth_deposit_method_4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textSize="14sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/eth_deposit_method_4_message" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>